# light-field-image-format

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conanfile.py  flake.nix
cmake/: conan_provider.cmake
docs/: format.md
extra/: CMakeLists.txt  av1bench.cc  hevc_compress.cc  hevc_decompress.cc  mozbench.cc  openjpegbench.cc  x265bench.cc  xvc_compress.cc  xvc_decompress.cc  xvcbench.cc
liblfif/: CMakeLists.txt
liblfif/include/: block_predictor.h  codec_parameters.h  dct_block_stream.h  dct_block_transformer.h  dwt_block_stream.h  dwt_block_transformer.h  lfif_decoder.h  lfif_encoder.h  lfwf_decoder.h  lfwf_encoder.h  prediction_type_stream.h
liblfif/include/components/: bitstream.h  block.h  bwt.h  cabac.h  colorspace.h  dct.h  diag_scan.h  dwt.h  endian.h  huffman.h  lfif_header.h  meta.h  mtf.h  predict.h  quant_table.h  runlength.h  stack_allocator.h  traversal_table.h  zigzag.h
liblfif/include/lfif/: codec.h  format.h
liblfif/src/: bwt.cc  codec.cc  format.cc  huffman.cc  runlength.cc
libppm/: CMakeLists.txt
libppm/include/: ppm.h  ppm_endian.h
libppm/src/: ppm.cc
tests/: CMakeLists.txt  compare_test_ppm.cc  create_extra_test_ppm.cc  create_test_lfif.cc  mtf_reference.h  test_bitstream.cc  test_block.cc  test_bwt.cc  test_cabac.cc  test_codec_parameters.cc  test_container_codec.cc  test_dct.cc  test_dwt.cc  test_format.cc  test_huffman.cc  test_lfif_header.cc  test_lfif_roundtrip.cc  test_lfwf_roundtrip.cc  test_mtf.cc  test_ppm.cc  test_prediction.cc  test_runlength.cc  test_traversal_table.cc  test_zigzag.cc  zigzag_oracle.h
tests/fixtures/: grid-01.ppm  grid-02.ppm  grid-03.ppm  legacy-lfif-2d-header.lfif  legacy-lfif-4d-header.lfif  non-bit-depth-maxval.ppm  one-pixel.ppm
tools/: CMakeLists.txt
tools/include/: compress.h  decompress.h  file_format.h  file_mask.h  plenoppm.h  tiler.h
tools/src/: compress.cc  decompress.cc  file_mask.cc  lfif.cc  lfif2d_compress.cc  lfif2d_decompress.cc  lfif4d_compress.cc  lfif4d_decompress.cc  plenoppm.cc
